--- a/Sharpener-React-Expense-Tracker-main/src/index.css
+++ b/Sharpener-React-Expense-Tracker-main/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   
   color-scheme: light dark;
@@ -27,4 +27,4 @@ a:hover{
 
 ul{
   list-style: none;
-}
+} */
